--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
-  "name": "stobix-bot",
+{
+  "name": "stobix-auto-bot",
   "version": "1.0.0",
+  "description": "Stobix Auto Bot - Automate Stobix tasks, referrals, and mining.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "author": "HIMANSHU SAROHA",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.9.0",
-    "dotenv": "^16.5.0",
-    "ethers": "^6.13.7",
-    "https-proxy-agent": "^7.0.6",
-    "neo-blessed": "^0.2.0"
+    "axios": "^1.6.7",
+    "chalk": "^4.1.2",
+    "dotenv": "^16.3.1",
+    "ethers": "^5.7.2",
+    "https-proxy-agent": "^7.0.2"
   }
-}
+} 
